# github-gpt-py

./: .gitignore  README.md  pyproject.toml
github_gpt_py/: __init__.py  __main__.py  ai.py  exceptions.py
