[tool.poetry]
name = "github-gpt-py"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"
packages = [{include = "github_gpt_py"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.236"
pygithub = "^1.58.2"
gitpython = "^3.1.31"
openai = "^0.27.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
